tests/profile/error/module/wrongtype_notLoadedInstruction.profile
{
  "version": { "major": 1, "minor": 0 },
  "modules": [
    {
      "name": "jkl-module",
      "loadedInstruction": "instr",
      "notLoadedInstruction": 1.0
    }
  ]
}
